fix: tests failing